--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
     "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
-    "next": "^14.2.30",
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.3.6",
+    "@hookform/resolvers": "^3.3.2",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.294.0",
     "framer-motion": "^10.16.16",
+    "idb": "^8.0.0",
+    "lucide-react": "^0.294.0",
+    "next": "^14.2.30",
+    "papaparse": "^5.4.1",
+    "postcss": "^8.4.32",
+    "react": "^18",
     "react-calendar": "^4.8.0",
     "react-datepicker": "^6.1.0",
-    "xlsx": "^0.18.5",
-    "papaparse": "^5.4.1",
-    "idb": "^8.0.0",
-    "react-hot-toast": "^2.4.1",
+    "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2"
+    "react-hot-toast": "^2.4.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5",
+    "xlsx": "^0.18.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/papaparse": "^5.3.14",
     "eslint": "^8",
     "eslint-config-next": "^14.2.30",
     "prettier": "^3.1.0"
