--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: leave-tracker
     env: node
+    plan: free
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
@@ -9,5 +10,9 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: NEXT_PUBLIC_APP_NAME
+        value: Leave Tracker
+      - key: NEXT_PUBLIC_APP_VERSION
+        value: 1.0.0
     healthCheckPath: /
     autoDeploy: true
