--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Application de gestion des congés personnelle",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "export": "next build && next export",
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^3.1.2",
     "tailwindcss": "^3.3.6",
     "typescript": "^5",
     "xlsx": "^0.18.5",
