--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Next.js
+.next/
+out/
+dist/
+
+# Build / Coverage
+build/
+coverage/
+
+# Logs
+*.log
+*.tmp
+
+# Typescript
+*.tsbuildinfo
+
+# Env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+.DS_Store
+
+# OS-specific
+Thumbs.db
