--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-     "@types/node": "^20",
-     "@types/papaparse": "^5.3.14",
-     "@types/react": "^18",
-     "@types/react-dom": "^18",
-     "eslint": "^8",
-     "eslint-config-next": "^14.2.30",
-     "prettier": "^3.1.0"
-   },
+    "@types/node": "^20.19.17",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.30",
+    "prettier": "^3.1.0",
+    "typescript": "^5.9.2"
+  },
   "engines": {
     "node": "20.x",
     "npm": ">=9.0.0"
