--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^14.2.30",
-    "prettier": "^3.1.0",
-    "typescript": "^5.9.2"
+    "prettier": "^3.1.0"
   },
   "engines": {
     "node": "20.x",
